# a2a-rs

./: Cargo.toml
a2a-agents/: Cargo.toml
a2a-agents/examples/: multi_agent_gateway_demo.rs
a2a-gateway/: API.md  Cargo.toml  DEPLOYMENT.md  Makefile  PROJECT_SUMMARY.md  README.md  gateway.example.yaml  gateway.yaml
a2a-gateway/benches/: gateway_bench.rs
a2a-gateway/scripts/: post.lua
a2a-gateway/src/: client.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  router.rs  storage.rs
a2a-gateway/src/adapter/: auth.rs  discovery.rs  http.rs  mod.rs  monitoring.rs  websocket.rs
a2a-gateway/src/application/: gateway.rs  load_balancer.rs  mod.rs  protocol_converter.rs  router.rs
a2a-gateway/src/config/: manager.rs  mod.rs  watcher.rs
a2a-gateway/src/domain/: health.rs  mod.rs  routing.rs  service.rs
a2a-gateway/src/port/: authentication.rs  load_balancing.rs  mod.rs  monitoring.rs  service_discovery.rs
a2a-gateway/tests/: integration_test.rs  integration_tests.rs
a2a-rs/src/adapter/business/: push_notification.rs
