[package]
name = "a2a-gateway"
version = "0.1.0"
edition = "2021"
authors = ["A2A Gateway Team"]
description = "A high-performance gateway for the Agent-to-Agent (A2A) protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/a2a-rs"
keywords = ["a2a", "gateway", "agent", "protocol", "microservices"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
dashmap = "5.0"
parking_lot = "0.12"

# Health checks
health-check = "0.1"

# Load balancing
rand = "0.8"

# A2A protocol dependencies
a2a-rs = { path = "../a2a-rs", features = ["http-client", "ws-client", "auth"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[features]
default = ["http", "websocket", "metrics", "tracing"]
http = []
websocket = []
metrics = ["metrics-exporter-prometheus"]
tracing = ["tracing-opentelemetry"]
auth = ["a2a-rs/auth"]

[[bin]]
name = "a2a-gateway"
path = "src/main.rs"

[[bench]]
name = "gateway_bench"
harness = false
